@startuml
'https://plantuml.com/class-diagram

abstract class Animal
Animal -- DrawingComponent
Animal -- MoveComponent
Animal -- PositionComponent

interface DrawingComponent
Animal <.. DrawingComponent

interface MoveComponent
Animal <.. MoveComponent
Field <.. MoveComponent

interface PositionComponent
Animal <.. PositionComponent

class ObjectDrawingComponent
DrawingComponent <|.. ObjectDrawingComponent


class ObjectPositionComponent
PositionComponent <|.. ObjectPositionComponent

class RabbitMoveComponent
MoveComponent <|.. RabbitMoveComponent

class FoxMoveComponent
MoveComponent <|.. FoxMoveComponent

class Rabbit
Animal <|-- Rabbit
ObjectDrawingComponent <.. Rabbit
RabbitMoveComponent <.. Rabbit
ObjectPositionComponent <.. Rabbit

class Fox
Animal <|-- Fox
ObjectDrawingComponent <.. Fox
FoxMoveComponent <.. Fox
ObjectPositionComponent <.. Fox

'LazyContainer <.. ObjectDrawingComponent
'Config <.. ObjectDrawingComponent
'LazyContainer <.. ObjectPositionComponent
'Config <.. ObjectPositionComponent

@enduml
